--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,5 @@
 
 
 <div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.   Site last updated {{ "now" | date: '%Y-%m-%d' }}
+  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}, site last updated {{ "now" | date: '%Y-%m-%d' }}.
 </div>
